--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "functions-rs"
 version = "0.1.0"
 edition = "2021"
+authors = ["Maxim Balabanski"]
+exclude = ["/tests/functions/"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
