--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Maxim Balabanski"]
 exclude = ["/tests/functions/"]
+repository = "https://github.com/MaxiBal/supabase-functions-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
